# personal-website

./: .gitignore  __init__.py  ai.py  chain.py  config.json  main.py  pyproject.toml  requirements.txt
instance/: database.db
personal_website/: .gitignore  __init__.py  ai.py  aiemail.py  auth.py  models.py  views.py
personal_website/static/: aiconv.js  colorMode.js  companyScore.css  companyScore.js  conv.css  index.js  main.css  note.js  signin.css
personal_website/static/fontkit/: space-lmx5-demo.html  stylesheet.css  theshapeofthings-z2e0-demo.html  wolf100regular-donkd-demo.html
personal_website/templates/: ai-emails.html  auth.html  companyScore.html  gptconversation.html  home.html  index.html  login.html  notes.html  signup.html
static/: QA.css  QA.js  aiMail.js  aiconv.js  conv.css  main.css  voice.js
templates/: QA.html  ai-emails.html  gptconversation.html  index.html  voice.html
