[tool.poetry]
name = "personal-website"
version = "0.1.0"
description = ""
authors = ["Andrew Sameh <andrew.zameh@gmail.com>"]
readme = "README.md"
packages = [{include = "personal_website"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
openai = "^0.26.5"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.3"
flask-restx = "^1.0.6"
flask-jwt-extended = "^4.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
